--- a/poqm/ja/kcodecs5_qt.po
+++ b/poqm/ja/kcodecs5_qt.po
@@ -21,7 +21,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
 "X-Accelerator-Marker: &\n"
 "X-Text-Markup: qtrich\n"
 "X-Generator: Lokalize 1.1\n"
@@ -440,7 +440,3 @@ msgstr "タイ語"
 msgctxt "KEncodingProber|@item Text character set"
 msgid "Arabic"
 msgstr "アラビア語"
-
-#~ msgctxt "KCharsets|@item Text character set"
-#~ msgid "Northern Saami"
-#~ msgstr "北サーミ語"
